[gd_scene load_steps=6 format=2]

[ext_resource path="res://Tilesets/Placeholder_White/Placeholder_White.tscn" type="PackedScene" id=1]
[ext_resource path="res://Entities/Hero/Hero.tscn" type="PackedScene" id=2]
[ext_resource path="res://HUD/Cameras/Player_Camera/Player_Camera.tscn" type="PackedScene" id=3]
[ext_resource path="res://Maps/Between_Worlds/Between_Worlds.gd" type="Script" id=4]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.976471, 0.376471, 0.376471, 1 )

[node name="Between_Worlds" type="Node2D"]
script = ExtResource( 4 )

[node name="Tween" type="Tween" parent="."]

[node name="BG" parent="." instance=ExtResource( 1 )]
modulate = Color( 0.501961, 0.501961, 0.501961, 1 )
collision_layer = 0
tile_data = PoolIntArray( -393217, 0, 0, -458752, 0, 0, -327682, 0, 0, -393215, 0, 0, -262146, 0, 0, -327679, 0, 0, -196610, 0, 0, -262143, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -196607, 0, 0, -196606, 0, 0, -196605, 0, 0, -65541, 0, 0, -131068, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -65535, 0, 0, -65534, 0, 0, -65533, 0, 0, 65534, 0, 0, 1, 0, 0, 131063, 0, 0, 131064, 0, 0, 131065, 0, 0, 131066, 0, 0, 131067, 0, 0, 131070, 0, 0, 65537, 0, 0, 65540, 0, 0, 65541, 0, 0, 65542, 0, 0, 65543, 0, 0, 65544, 0, 0, 196599, 0, 0, 196603, 0, 0, 196606, 0, 0, 131073, 0, 0, 131076, 0, 0, 131080, 0, 0, 262135, 0, 0, 262137, 0, 0, 262139, 0, 0, 262142, 0, 0, 196609, 0, 0, 196612, 0, 0, 196614, 0, 0, 196616, 0, 0, 327671, 0, 0, 327672, 0, 0, 327673, 0, 0, 327675, 0, 0, 327678, 0, 0, 262145, 0, 0, 262148, 0, 0, 262150, 0, 0, 262151, 0, 0, 262152, 0, 0, 393211, 0, 0, 393214, 0, 0, 327681, 0, 0, 327684, 0, 0, 458743, 0, 0, 458744, 0, 0, 458745, 0, 0, 458747, 0, 0, 458750, 0, 0, 393217, 0, 0, 393220, 0, 0, 393222, 0, 0, 393223, 0, 0, 393224, 0, 0, 524279, 0, 0, 524281, 0, 0, 524283, 0, 0, 524286, 0, 0, 458753, 0, 0, 458756, 0, 0, 458758, 0, 0, 458760, 0, 0, 589817, 0, 0, 589819, 0, 0, 589822, 0, 0, 524289, 0, 0, 524292, 0, 0, 524294, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 655351, 0, 0, 655353, 0, 0, 655355, 0, 0, 655358, 0, 0, 589825, 0, 0, 589828, 0, 0, 589830, 0, 0, 589832, 0, 0, 589844, 0, 0, 589847, 0, 0, 720887, 0, 0, 720889, 0, 0, 720891, 0, 0, 720894, 0, 0, 655361, 0, 0, 655364, 0, 0, 655366, 0, 0, 655368, 0, 0, 655380, 0, 0, 655382, 0, 0, 655383, 0, 0, 655385, 0, 0, 655386, 0, 0, 655387, 0, 0, 655388, 0, 0, 655389, 0, 0, 655390, 0, 0, 655391, 0, 0, 655392, 0, 0, 655393, 0, 0, 655394, 0, 0, 655395, 0, 0, 655397, 0, 0, 655398, 0, 0, 786423, 0, 0, 786425, 0, 0, 786427, 0, 0, 786430, 0, 0, 720897, 0, 0, 720900, 0, 0, 720902, 0, 0, 720904, 0, 0, 720916, 0, 0, 720934, 0, 0, 851959, 0, 0, 851961, 0, 0, 851963, 0, 0, 851966, 0, 0, 786433, 0, 0, 786436, 0, 0, 786438, 0, 0, 786440, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 786456, 0, 0, 786457, 0, 0, 786458, 0, 0, 786459, 0, 0, 786460, 0, 0, 786461, 0, 0, 786462, 0, 0, 786463, 0, 0, 786464, 0, 0, 786465, 0, 0, 786466, 0, 0, 786467, 0, 0, 786468, 0, 0, 786469, 0, 0, 786470, 0, 0, 917490, 0, 0, 917491, 0, 0, 917493, 0, 0, 917494, 0, 0, 917495, 0, 0, 917497, 0, 0, 917499, 0, 0, 917502, 0, 0, 851969, 0, 0, 851972, 0, 0, 851974, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851980, 0, 0, 851981, 0, 0, 983026, 0, 0, 983033, 0, 0, 983035, 0, 0, 983039, 0, 0, 917504, 0, 0, 917508, 0, 0, 917510, 0, 0, 917517, 0, 0, 1048562, 0, 0, 1048563, 0, 0, 1048564, 0, 0, 1048565, 0, 0, 1048566, 0, 0, 1048567, 0, 0, 1048568, 0, 0, 1048569, 0, 0, 1048571, 0, 0, 983044, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 1114107, 0, 0, 1048580, 0, 0, 1179634, 0, 0, 1179635, 0, 0, 1179636, 0, 0, 1179637, 0, 0, 1179638, 0, 0, 1179639, 0, 0, 1179640, 0, 0, 1179641, 0, 0, 1179642, 0, 0, 1179643, 0, 0, 1114116, 0, 0, 1114117, 0, 0, 1114118, 0, 0, 1114119, 0, 0, 1114120, 0, 0, 1114121, 0, 0, 1114122, 0, 0, 1114123, 0, 0, 1114124, 0, 0, 1114125, 0, 0, 1376276, 0, 0, 1376277, 0, 0, 1376278, 0, 0, 1376279, 0, 0, 1376280, 0, 0, 1376281, 0, 0, 1376282, 0, 0, 1376283, 0, 0, 1376284, 0, 0, 1376285, 0, 0, 1376286, 0, 0, 1376287, 0, 0, 1376288, 0, 0, 1376289, 0, 0, 1376290, 0, 0, 1376291, 0, 0, 1376292, 0, 0, 1376293, 0, 0, 1376294, 0, 0, 1441812, 0, 0, 1441830, 0, 0, 1507348, 0, 0, 1507350, 0, 0, 1507351, 0, 0, 1507353, 0, 0, 1507354, 0, 0, 1507355, 0, 0, 1507356, 0, 0, 1507357, 0, 0, 1507358, 0, 0, 1507359, 0, 0, 1507360, 0, 0, 1507361, 0, 0, 1507362, 0, 0, 1507363, 0, 0, 1507365, 0, 0, 1507366, 0, 0, 1572884, 0, 0, 1572887, 0, 0, 1638420, 0, 0, 1638421, 0, 0, 1638422, 0, 0, 1638423, 0, 0 )

[node name="Walls" parent="." instance=ExtResource( 1 )]
tile_data = PoolIntArray( -720897, 0, 0, -786432, 0, 0, -655362, 0, 0, -720895, 0, 0, -589826, 0, 0, -655359, 0, 0, -524292, 0, 0, -524291, 0, 0, -524290, 0, 0, -589823, 0, 0, -589822, 0, 0, -589821, 0, 0, -458757, 0, 0, -458756, 0, 0, -524285, 0, 0, -524284, 0, 0, -393222, 0, 0, -393221, 0, 0, -458748, 0, 0, -458747, 0, 0, -327687, 0, 0, -327686, 0, 0, -393211, 0, 0, -393210, 0, 0, -262152, 0, 0, -262151, 0, 0, -327674, 0, 0, -327673, 0, 0, -196617, 0, 0, -196616, 0, 0, -262137, 0, 0, -262136, 0, 0, -131082, 0, 0, -131081, 0, 0, -196600, 0, 0, -196599, 0, 0, -65547, 0, 0, -65546, 0, 0, -131063, 0, 0, -131062, 0, 0, -11, 0, 0, -65526, 0, 0, 65523, 0, 0, 65525, 0, 0, 10, 0, 0, 12, 0, 0, 131059, 0, 0, 131061, 0, 0, 65546, 0, 0, 65548, 0, 0, 196595, 0, 0, 196597, 0, 0, 131082, 0, 0, 131084, 0, 0, 262131, 0, 0, 262133, 0, 0, 196618, 0, 0, 196620, 0, 0, 327667, 0, 0, 327669, 0, 0, 262154, 0, 0, 262156, 0, 0, 393203, 0, 0, 327692, 0, 0, 458736, 0, 0, 458737, 0, 0, 458738, 0, 0, 458739, 0, 0, 393228, 0, 0, 393229, 0, 0, 393230, 0, 0, 393231, 0, 0, 589808, 0, 0, 589809, 0, 0, 589810, 0, 0, 524301, 0, 0, 524302, 0, 0, 524303, 0, 0, 524324, 0, 0, 524325, 0, 0, 524326, 0, 0, 524327, 0, 0, 524328, 0, 0, 655344, 0, 0, 589839, 0, 0, 589864, 0, 0, 720880, 0, 0, 655375, 0, 0, 655400, 0, 0, 786416, 0, 0, 720911, 0, 0, 720936, 0, 0, 851952, 0, 0, 786447, 0, 0, 786472, 0, 0, 917488, 0, 0, 851983, 0, 0, 852008, 0, 0, 983024, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 917528, 0, 0, 917529, 0, 0, 917530, 0, 0, 917531, 0, 0, 917532, 0, 0, 917533, 0, 0, 917534, 0, 0, 917535, 0, 0, 917536, 0, 0, 917537, 0, 0, 917538, 0, 0, 917539, 0, 0, 917540, 0, 0, 917541, 0, 0, 917542, 0, 0, 917543, 0, 0, 917544, 0, 0, 1048560, 0, 0, 1114096, 0, 0, 1179632, 0, 0, 1245168, 0, 0, 1310704, 0, 0, 1310705, 0, 0, 1310706, 0, 0, 1310707, 0, 0, 1310708, 0, 0, 1310709, 0, 0, 1310710, 0, 0, 1310711, 0, 0, 1310712, 0, 0, 1310713, 0, 0, 1310714, 0, 0, 1310715, 0, 0, 1310716, 0, 0, 1310717, 0, 0, 1310718, 0, 0, 1310719, 0, 0, 1245184, 0, 0, 1245185, 0, 0, 1245186, 0, 0, 1245187, 0, 0, 1245188, 0, 0, 1245189, 0, 0, 1245190, 0, 0, 1245191, 0, 0, 1245192, 0, 0, 1245193, 0, 0, 1245194, 0, 0, 1245195, 0, 0, 1245196, 0, 0, 1245197, 0, 0, 1245198, 0, 0, 1245199, 0, 0, 1245200, 0, 0, 1245201, 0, 0, 1245202, 0, 0, 1245203, 0, 0, 1245204, 0, 0, 1245205, 0, 0, 1245206, 0, 0, 1245207, 0, 0, 1245208, 0, 0, 1245209, 0, 0, 1245210, 0, 0, 1245211, 0, 0, 1245212, 0, 0, 1245213, 0, 0, 1245214, 0, 0, 1245215, 0, 0, 1245216, 0, 0, 1245217, 0, 0, 1245218, 0, 0, 1245219, 0, 0, 1245220, 0, 0, 1245221, 0, 0, 1245222, 0, 0, 1245223, 0, 0, 1245224, 0, 0, 1245226, 0, 0, 1245227, 0, 0, 1245228, 0, 0, 1245229, 0, 0, 1245230, 0, 0, 1245231, 0, 0, 1245232, 0, 0, 1245233, 0, 0, 1245234, 0, 0, 1245235, 0, 0, 1245236, 0, 0, 1310760, 0, 0, 1310762, 0, 0, 1441776, 0, 0, 1441777, 0, 0, 1441778, 0, 0, 1441779, 0, 0, 1441780, 0, 0, 1441781, 0, 0, 1441782, 0, 0, 1441783, 0, 0, 1441784, 0, 0, 1441785, 0, 0, 1441786, 0, 0, 1441787, 0, 0, 1441788, 0, 0, 1441789, 0, 0, 1441790, 0, 0, 1441791, 0, 0, 1376256, 0, 0, 1376257, 0, 0, 1376258, 0, 0, 1376259, 0, 0, 1376260, 0, 0, 1376261, 0, 0, 1376262, 0, 0, 1376263, 0, 0, 1376264, 0, 0, 1376265, 0, 0, 1376266, 0, 0, 1376267, 0, 0, 1376268, 0, 0, 1376269, 0, 0, 1376270, 0, 0, 1376271, 0, 0, 1376296, 0, 0, 1376298, 0, 0, 1376300, 0, 0, 1376301, 0, 0, 1376302, 0, 0, 1376303, 0, 0, 1376304, 0, 0, 1376305, 0, 0, 1376306, 0, 0, 1376307, 0, 0, 1376308, 0, 0, 1507312, 0, 0, 1441807, 0, 0, 1441832, 0, 0, 1441834, 0, 0, 1441836, 0, 0, 1572848, 0, 0, 1572849, 0, 0, 1572851, 0, 0, 1572852, 0, 0, 1572853, 0, 0, 1572854, 0, 0, 1572855, 0, 0, 1572856, 0, 0, 1572857, 0, 0, 1572858, 0, 0, 1572859, 0, 0, 1572860, 0, 0, 1572861, 0, 0, 1572862, 0, 0, 1572863, 0, 0, 1507328, 0, 0, 1507329, 0, 0, 1507330, 0, 0, 1507331, 0, 0, 1507332, 0, 0, 1507333, 0, 0, 1507334, 0, 0, 1507335, 0, 0, 1507336, 0, 0, 1507337, 0, 0, 1507338, 0, 0, 1507339, 0, 0, 1507340, 0, 0, 1507342, 0, 0, 1507343, 0, 0, 1507368, 0, 0, 1507370, 0, 0, 1572904, 0, 0, 1638436, 0, 0, 1638437, 0, 0, 1638438, 0, 0, 1638439, 0, 0, 1638440, 0, 0 )

[node name="Intro_Camera" type="Camera2D" parent="."]
position = Vector2( 0, 200 )
current = true
zoom = Vector2( 0.1, 5 )

[node name="Hero" parent="." instance=ExtResource( 2 )]
position = Vector2( -2.66174, 551.662 )

[node name="Player_Camera" parent="Hero" instance=ExtResource( 3 )]
visible = false

[node name="Player_Status" parent="Hero/Player_Camera" index="0"]
Character = NodePath("../..")

[node name="Soul_Counter" parent="Hero/Player_Camera" index="1"]
Character = NodePath("../..")

[node name="Intro_Panel" type="Panel" parent="."]
modulate = Color( 1, 1, 1, 0 )
margin_left = -1000.0
margin_top = -1750.0
margin_right = 1000.0
margin_bottom = 1750.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="tween_all_completed" from="Tween" to="." method="_on_Tween_tween_all_completed"]

[editable path="Hero/Player_Camera"]
